# video-downloader

./: .dockerignore  .gitignore  Dockerfile-flask  Dockerfile-nginx  README.md  compose.yml  main.py  nginx.conf  pyproject.toml
.github/: dependabot.yml
converter/: converter.py
downloader/: downloader.py  filename_collector.py
src/: main.py
src/converter/: converter.py
src/downloader/: downloader.py  no_url_provided.py
src/web/: app.py
url_validator/: url_validator.py
web/: app.py
web/static/: index.css
web/templates/: index.html
