[tool.poetry]
name = "videodownloader"
version = "1.0.0"
description = "Simple python program for download youtube videos easily."
authors = ["Heber F Barra <heberferreirabarra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2025.9.26"
flask = "^3.1.2"
waitress = "^3.0.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
