[tool.poetry]
name = "videodownloader"
version = "1.0.0"
description = "Simple python program for download youtube videos easily."
authors = ["Heber F Barra <heberferreirabarra@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2025.12.8"
flask = "^3.1.2"
waitress = "^3.0.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.7"

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
